--- a/LMS/pom.xml
+++ b/LMS/pom.xml
@@ -116,6 +116,12 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>        
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.2.3.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
